--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+@import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css);;
+
+body {
+  font-size: 15pt;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  font-size: 10px;
+  background: #282c34;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.weatherInfo {
+  padding: 3rem;
+  display: grid;
+  grid-gap: 0.8rem;
+  place-items: center;
+  grid-template-rows: 0.5fr repeat(1, 2fr) 2.5fr;
+  border-radius: 1rem;
+  background: rgba(0, 8, 95, 0.6);
+  box-shadow: rgba(60, 234, 255, 0.3) 0rem 0.8rem 3.4rem, rgba(60, 234, 255, 0.1) 0rem 0.8rem 3.4rem, rgba(60, 234, 255, 0.6) 0rem 0.8rem 3.4rem;
+
+}
+.weatherImg{
+  padding-top: 4rem;
+font-size: 10rem;
+  color: rgba(60, 234, 255, 0.8);
+  text-shadow: rgba(60, 234, 255, 0.3) 0rem 0.8rem 3.4rem, rgba(60, 234, 255, 0.1) 0rem 0.8rem 3.4rem, rgba(60, 234, 255, 0.6) 0rem 0.8rem 3.4rem;
+}
+.Search{
+    border: 1px solid rgba(112, 119, 204, 0.1);
+    background: rgba(2, 140, 152, 0.1);
+    color: whitesmoke;
+    padding: 0.5rem;
+    border-radius: 0.8rem;
+    color: rgba(60, 234, 255, 1);
+    
+}
+.Search:focus{
+  outline: none;
+}
+.Search::placeholder{
+  color: rgba(60, 234, 255, 1);
+}
+.info{
+  font-size: 3.5rem;
+  /* color: rgba(255, 255, 255, 0.8); */
+   color: rgba(60, 234, 255, 1);
+  display: grid;
+  grid-gap: 0.3rem;
+  padding: 0.1rem;
+  place-items: center;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.temprature{
+  grid-row: 3/1;
+}
+.country{
+  font-size: 1rem;
+  opacity: 0.9;
+}
+.weatherMood{
+  font-size: 2.5rem;
+}
+
+.btn{
+  background: rgba(60, 234, 255, 0.2);
+  padding: 0.5rem;
+  margin-left: 0.6rem;
+  border: none;
+  border-radius: 0.8rem;
+  color: rgba(60, 234, 255, 1);
+}
+
+
+@media (min-width:320px)  { 
+  html{
+  font-size: 7px;
+}
+}
+@media (min-width: 480px)  { /* smartphones, Android phones, landscape iPhone */ 
+  html{
+  font-size: 20px !important;
+}
+}
+@media (min-width:600px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+
+  html{
+  font-size: 30px;
+}
+}
+@media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
+html{
+  font-size: 40px;
+}}
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ 
+  html{
+  font-size: 50px;
+}
+}
+@media (min-width:1281px) { /* hi-res laptops and desktops */ 
+  html{
+  font-size: 60px;
+}
 }
