--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ font-size: 10rem;
 .Search{
     border: 0.1rem solid rgba(112, 119, 204, 0.1);
     background: rgba(2, 140, 152, 0.1);
-    color: whitesmoke;
+    font-size: 1rem;
     padding: 0.5rem;
     border-radius: 0.8rem;
     color: rgba(60, 234, 255, 1);
@@ -74,6 +74,7 @@ font-size: 10rem;
   border: none;
   border-radius: 0.8rem;
   color: rgba(60, 234, 255, 1);
+  font-size: 1rem;
 }
 
 
